--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
   },
   "exclude": [
   	"node_modules",
-  	"typings/browser",
-  	"typings/browser.d.ts"
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
