--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,10 @@ node_modules
 .node_repl_history
 
 # Removing .js files as it is a .ts project
+client/app/*.js
+client/app/*.js.map
 server/*.js
 server/*.js.map
+
+# Removing typings
+typings
