--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "commonjs",
+    "target": "es5",
+    "module": "system",
+    "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -9,8 +10,8 @@
     "noImplicitAny": false
   },
   "exclude": [
-  	"node_modules",
-    "typings/main",
-    "typings/main.d.ts"
+    "../node_modules",
+    "../typings/main",
+    "../typings/main.d.ts"
   ]
 }
