--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile-server": "cd server && tsc",
     "compile-client": "cd client && tsc",
+    "compile-all": "npm run compile-server && npm run compile-client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/app.js",
     "compilation": "tsc -w"
@@ -31,6 +32,7 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs": "^0.19.26",
     "zone.js": "0.6.10",
-    "reflect-metadata" : "0.1.2"
+    "reflect-metadata" : "0.1.2",
+    "socket.io": "^1.4.5"
   }
 }
