--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ node_modules
 # Removing .js files as it is a .ts project
 client/app/*.js
 client/app/*.js.map
+client/app/custom_components/*.js
+client/app/custom_components/*.js.map
+client/app/services/*.js
+client/app/services/*.js.map
 server/*.js
 server/*.js.map
 server/model/*.js
