--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "homepage": "https://github.com/granuloeldar/Zadatak2#readme",
   "dependencies": {
-    "angular2": "^2.0.0-beta.15",
+    "angular2": "^2.0.0-beta.17",
     "express": "^4.13.4",
     "nodemon": "^1.9.1",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "0.35.0",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.26",
-    "zone.js": "0.6.10",
+    "zone.js": "^0.6.12",
     "reflect-metadata" : "0.1.2",
     "socket.io": "^1.4.5"
   }
