--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,6 @@
   "exclude": [
     "../node_modules",
     "../typings/main",
-    "../typings/main.d.ts",
-    "assets/js/angular_config"
+    "../typings/main.d.ts"
   ]
 }
